Lock color system and normalize sections

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
 
     <title>Easy D Logistics</title>
 
-    <!-- Favicon (optional) -->
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
-    <!-- Description for SEO -->
+    <!-- SEO Description -->
     <meta
       name="description"
-      content="Easy D Logistics offers professional dispatching and freight-management solutions for owner-operators and small trucking fleets. Built for efficiency, growth, and transparency."
+      content="Easy D Logistics offers professional dispatching services for owner-operators and small fleets. Maximize earnings, reduce stress, and stay on the road."
     />
   </head>
 
-  <body class="bg-primary-softer text-white">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <body style="background-color: var(--color-primary); color: var(--color-text-primary);">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
